# rl-environments

./: .gitignore  README.md  pyproject.toml
environments/spam_detection_rl_environment/: README.md  pyproject.toml  spam_detection_rl_environment.py
environments/spam_detection_rl_environment/.prime/: .env-metadata.json
train/: fix_results.py  pyproject.toml
train/.prime/skills/browse-environments/: SKILL.md
train/.prime/skills/create-environments/: SKILL.md
train/.prime/skills/evaluate-environments/: SKILL.md
train/.prime/skills/optimize-with-environments/: SKILL.md
train/.prime/skills/review-environments/: SKILL.md
train/.prime/skills/train-with-environments/: SKILL.md
train/configs/rl/: spam-detection.toml
train/environments/: AGENTS.md
train/outputs/evals/spam-detection-rl-environment--Qwen--Qwen3-4B-Instruct-2507/95027559/: metadata.json
train/outputs/evals/spam-detection-rl-environment--Qwen--Qwen3-4B-Instruct-2507/d80cfe8b/: metadata.json  results.jsonl
train/outputs/evals/spam-detection-rl-environment--openai--gpt-oss-120b/3c72cd90/: metadata.json
