[project]
name = "spam-detection-rl-environment"
description = "A reinforcement learning environment for training models to detect spam messages"
tags = ["spam-detection", "text-classification", "train", "eval"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["spam_detection_rl_environment.py", "pyproject.toml"] 

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
